--- a/EFUnifOfWorkDI/EF.Data/EF.Data.csproj
+++ b/EFUnifOfWorkDI/EF.Data/EF.Data.csproj
@@ -56,6 +56,11 @@
     <Compile Include="IRepository.cs" />
     <Compile Include="Mapping\UserMap.cs" />
     <Compile Include="Mapping\UserProfileMap.cs" />
+    <Compile Include="Migrations\201901040244501_init database.cs" />
+    <Compile Include="Migrations\201901040244501_init database.Designer.cs">
+      <DependentUpon>201901040244501_init database.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repository.cs" />
   </ItemGroup>
@@ -68,6 +73,11 @@
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\201901040244501_init database.resx">
+      <DependentUpon>201901040244501_init database.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
